--- a/overlays/development/dbclaim-pvc.yaml
+++ b/overlays/development/dbclaim-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: mysql-pv-claim
-    name: random
+    name: frontend
   name: frontend
   namespace: mysql
 spec:
