image update quayacm-review

--- a/quayacm-review/deployment.yaml
+++ b/quayacm-review/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - image: central-quay-registry.apps.ocp4.example.com/finance/budget-app:production
       imagePullSecrets:
-        - finance-deployer-pull-secret 
+        - name: finance-deployer-pull-secret 
         name: budget-app
         ports:
         - containerPort: 8080
